Generate good stepper results

--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -388,8 +388,13 @@
     "    ax.add_artist(leg)\n",
     "    \n",
     "\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_cdfs.pkl\")\n",
+    "# very good results:\n",
     "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
+    "\n",
+    "# updated particle filter etc.\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_new.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_new_uniform.pkl\")\n",
+    "\n",
     "#plot_df = err_df.copy()\n",
     "\n",
     "X_MAX = {\n",
@@ -433,7 +438,8 @@
    "source": [
     "from utils.pandas_utils import filter_by_dict\n",
     "\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_new_uniform.pkl\")\n",
     "\n",
     "#chosen_dicts = {\n",
     "    #\"algorithm\": [\"bayes distance\", \"bayes angle\"],\n",
@@ -481,7 +487,8 @@
    "source": [
     "# use the different online schemes and compare\n",
     "df_mat = pd.read_pickle(\"results/stepper_results_matrices.pkl\")\n",
-    "df_mat = df_mat[df_mat[\"relative std\"] == 1.0]\n",
+    "df_mat = df_mat[(df_mat[\"relative std\"] == 1.0) \n",
+    "              & (df_mat[\"mask bad\"]==\"fixed\")]\n",
     "\n",
     "for (calibration, n_window), df_calib in df_mat.groupby([\"calibration name\", \"n window\"]):\n",
     "    fig, axs = plt.subplots(1, 2)\n",
