Add factor graph results plots

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -539,6 +539,9 @@
     "import gtsam\n",
     "from audio_gtsam.wall_backend import WallBackend\n",
     "\n",
+    "from moviepy.editor import VideoClip\n",
+    "from moviepy.video.io.bindings import mplfig_to_npimage\n",
+    "\n",
     "X = gtsam.symbol_shorthand.X\n",
     "P = gtsam.symbol_shorthand.P\n",
     "\n",
@@ -556,7 +559,10 @@
     "d_estimates = []\n",
     "d_gt = []\n",
     "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
     "for i, prob_dists in enumerate(dist_matrix.T):\n",
+    "    prob_dists = dist_matrix[:, i]\n",
     "    t1 = time.time()\n",
     "    if i < n_calib:\n",
     "        continue\n",
@@ -588,6 +594,8 @@
     "    d_estimates.append(distance_estimate * 1e2 if distance_estimate else np.nan)\n",
     "    d_gt.append(distance_gt if distance_estimate else np.nan)\n",
     "    #print(f\"time with isam={wall_backend.use_isam}: {(time.time() - t1)*1e3:.0f}ms\")\n",
+    "    \n",
+    "    wall_backend.plot(fig, ax)\n",
     "\n",
     "errors_df.loc[len(errors_df), :] = {\n",
     "    \"algorithm\": algorithm + f\"_win{n_window}_factorgraph\",\n",
@@ -599,11 +607,16 @@
     "    \"time\": time_moving / n_points \n",
     "}\n",
     "   \n",
+    "\n",
+    "#duration = 20\n",
+    "#animation = VideoClip(make_frame, duration=duration, )\n",
+    "#animation.ipython_display(fps = 20, loop = True, autoplay = True)\n",
+    "\n",
     "#plot_projections(wall_backend.all_initial_estimates, axis_length=0.2, ls=\":\", perspective=False, side=True)\n",
     "#plt.show()\n",
-    "wall_backend.get_results()\n",
-    "plot_projections(wall_backend.result, axis_length=0.1, perspective=False, side=True)\n",
-    "plt.show()"
+    "#wall_backend.get_results()\n",
+    "#plot_projections(wall_backend.result, axis_length=0.1, perspective=False, side=True)\n",
+    "#plt.show() "
    ]
   },
   {
@@ -829,6 +842,8 @@
     "results_matrix_angles = np.full((len(wall_detection.estimator.angles_deg), n_timesteps), np.nan)\n",
     "results_matrix_moving = np.full((len(wall_detection.estimator.distances_cm), n_timesteps), np.nan)\n",
     "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
     "for i in range(n_timesteps):\n",
     "    res = wall_detection.listener_callback_offline(\n",
     "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], timestamp=times[i]*1e3\n",
@@ -880,6 +895,12 @@
     "    fg_dist_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
     "    fg_angle_estimates.append(angle_deg)\n",
     "    fg_colors.append(f\"C{wall_backend.plane_index+1}\")\n",
+    "    \n",
+    "    \n",
+    "    wall_backend.plot(fig, ax, n_poses = 180)\n",
+    "wall_backend.add_decorations(fig, ax, n_poses = 180)\n",
+    "\n",
+    "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_poses.pdf\")\n",
     "#plt.plot(times[:n_timesteps], angles_forward)\n",
     "print(\"done\")"
    ]
