Add more demo plots

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -34,8 +34,8 @@
     "\n",
     "rcParams[\"figure.max_open_warning\"] = False\n",
     "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
-    "rcParams[\"font.size\"] = 12\n",
-    "\n",
+    "rcParams[\"font.size\"] = 14\n",
+    "rcParams[\"text.usetex\"] = True\n",
     "#import rclpy\n",
     "#rclpy.init()"
    ]
@@ -371,7 +371,7 @@
     "        xvalues,\n",
     "        gt_values,\n",
     "        color=\"black\",\n",
-    "        label=\"ground truth\",\n",
+    "        label=\"\\\\textbf{ground truth}\",\n",
     "        marker='x'\n",
     "    )\n",
     "    ax.set_ylim(min(yvalues), max(yvalues))\n",
@@ -379,7 +379,7 @@
     "        xvalues,\n",
     "        estimates,\n",
     "        color=\"white\",\n",
-    "        label=\"estimates\",\n",
+    "        label=\"\\\\textbf{estimates}\",\n",
     "        marker='o',\n",
     "        ls='-'\n",
     "    )\n",
@@ -393,7 +393,7 @@
     "        \n",
     "        leg = ax.legend(framealpha=0, loc='upper right')\n",
     "        for text in leg.get_texts():\n",
-    "            plt.setp(text, color='w')\n",
+    "            plt.setp(text, color='w', weight='bold')\n",
     "        #ax.set_xticks(xticks, labels=xticklabels)\n",
     "        #ax.set_yticks(yticks, labels=yticks)\n",
     "        #n_xticks = 5\n",
@@ -512,12 +512,14 @@
     "                          no_deco=no_deco, n_calib=n_calib_here)\n",
     "    ax.set_title(get_title(row, ignore=ignore + ignore_here))\n",
     "    fig.set_size_inches(*fig_size)\n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_distributions_distance_{i}.pdf\")\n",
     "    \n",
     "    fig, ax = plot_matrix(a_here, matrix_angles, #xvalues=times, \n",
     "                          gt_values = gt_angles,\n",
     "                          no_deco=no_deco, n_calib=n_calib_here)\n",
     "    ax.set_title(get_title(row, ignore=ignore + ignore_here))\n",
-    "    fig.set_size_inches(*fig_size)"
+    "    fig.set_size_inches(*fig_size)\n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_distributions_angle_{i}.pdf\")"
    ]
   },
   {
@@ -537,7 +539,7 @@
    "source": [
     "from factor_graph.plot import plot_projections\n",
     "import gtsam\n",
-    "from audio_gtsam.wall_backend import WallBackend\n",
+    "from audio_gtsam.wall_backend import WallBackend, add_decorations\n",
     "\n",
     "from moviepy.editor import VideoClip\n",
     "from moviepy.video.io.bindings import mplfig_to_npimage\n",
@@ -595,7 +597,8 @@
     "    d_gt.append(distance_gt if distance_estimate else np.nan)\n",
     "    #print(f\"time with isam={wall_backend.use_isam}: {(time.time() - t1)*1e3:.0f}ms\")\n",
     "    \n",
-    "    wall_backend.plot(fig, ax)\n",
+    "    wall_backend.plot(fig, ax, n_poses=20)\n",
+    "add_decorations(fig, ax, n_poses=20)\n",
     "\n",
     "errors_df.loc[len(errors_df), :] = {\n",
     "    \"algorithm\": algorithm + f\"_win{n_window}_factorgraph\",\n",
@@ -746,7 +749,7 @@
     "    ax.set_ylabel(\"distance [cm]\")\n",
     "\n",
     "\n",
-    "def plot_groundtruth(ax, color=\"white\", **kwargs):\n",
+    "def plot_groundtruth_d(ax, color=\"white\", **kwargs):\n",
     "    ax.plot(distances_walls, color=color, **kwargs)\n",
     "\n",
     "def plot_distance_estimates(ax, distance_estimates, label=None, **kwargs):\n",
@@ -784,18 +787,18 @@
     "    ax.scatter(np.arange(len(d_estimates)), d_estimates, color=colors)\n",
     "\n",
     "def plot_all():\n",
-    "    fig, axs = plt.subplots(5, 1, sharex=True)\n",
+    "    fig, axs = plt.subplots(4, 1, sharex=True)\n",
     "    fig.set_size_inches(20, 30)\n",
     "\n",
     "    plot_distance_matrix(axs[0], results_matrix_moving)\n",
     "    ymin, ymax = axs[0].get_ylim()\n",
-    "    plot_groundtruth(axs[0], color=\"white\")\n",
+    "    plot_groundtruth_d(axs[0], color=\"white\")\n",
     "    plot_distance_estimates(axs[0], distance_estimates, label=\"chosen method\")\n",
     "    \n",
     "    plot_fg_estimates(axs[0], fg_dist_estimates, fg_colors)\n",
     "    axs[0].set_ylim(ymin, ymax)\n",
     "    \n",
-    "    plot_groundtruth(axs[1], color=\"black\")\n",
+    "    plot_groundtruth_d(axs[1], color=\"black\")\n",
     "    plot_distance_estimates(axs[1], distance_estimates, label=\"chosen method\")\n",
     "    plot_fg_estimates(axs[1], fg_dist_estimates, fg_colors)\n",
     "    axs[1].set_ylim(5, 100)\n",
@@ -803,8 +806,7 @@
     "\n",
     "    plot_std_estimates(axs[2], std_estimates, label=\"chosen method\")\n",
     "\n",
-    "    plot_tail(axs[3], results_matrix_moving)\n",
-    "\n",
+    "    #plot_tail(axs[3], results_matrix_moving)\n",
     "    if not WallDetection.SIMPLIFY_ANGLES:\n",
     "        plot_angles(axs[4], results_matrix_angles)\n",
     "    return fig, axs"
@@ -819,6 +821,8 @@
    "outputs": [],
    "source": [
     "from audio_gtsam.wall_backend import WallBackend\n",
+    "from audio_gtsam.wall_backend import add_decorations\n",
+    "\n",
     "from utils.moving_estimators import get_estimate\n",
     "from crazyflie_demo.wall_detection import WallDetection\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
@@ -897,12 +901,39 @@
     "    fg_colors.append(f\"C{wall_backend.plane_index+1}\")\n",
     "    \n",
     "    \n",
-    "    wall_backend.plot(fig, ax, n_poses = 180)\n",
-    "wall_backend.add_decorations(fig, ax, n_poses = 180)\n",
+    "    wall_backend.plot(fig, ax, n_poses=n_timesteps)\n",
+    "add_decorations(fig, ax, n_poses=n_timesteps)\n",
     "\n",
-    "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_poses.pdf\")\n",
+    "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_result.pdf\")\n",
     "#plt.plot(times[:n_timesteps], angles_forward)\n",
     "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_groundtruth(ax, positions_cm, walls, n_poses=20):\n",
+    "    from audio_gtsam.wall_backend import plot_wall, add_decorations\n",
+    "    cmap = plt.get_cmap('inferno', n_timesteps) \n",
+    "    n_labels = 3\n",
+    "    \n",
+    "    for i, p in enumerate(positions_cm):\n",
+    "        ax.scatter(*p[:2]*1e-2, color=cmap(i))\n",
+    "        \n",
+    "    for i, (wall_distance, wall_angle) in enumerate(walls):\n",
+    "        normal = np.r_[\n",
+    "            np.cos(wall_angle / 180 * np.pi), \n",
+    "            np.sin(wall_angle / 180 * np.pi)\n",
+    "        ]\n",
+    "        arrow, line = plot_wall(wall_distance*1e-2, normal, ax, plane_index=i, label=f\"wall {i}\")\n",
+    "    add_decorations(fig, ax, n_poses=n_timesteps)\n",
+    "        \n",
+    "fig, ax = plt.subplots()\n",
+    "plot_groundtruth(ax, positions_cm, walls=WALLS_DICT[exp_name])\n",
+    "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_gt.pdf\")"
    ]
   },
   {
@@ -921,15 +952,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "estimator = \"particle\"\n",
     "try:\n",
-    "    matrix_df = pd.read_pickle(\"results/demo_results_matrices_moving.pkl\")\n",
-    "    # full results with all paramteres\n",
-    "    #matrix_df = pd.read_pickle(\"results/DistanceFlying_matrices.pkl\")\n",
-    "    \n",
-    "    # results with a bit fewer parameters\n",
-    "    #matrix_df_0 = pd.read_pickle(\"results/DistanceFlying_matrices_std0.pkl\")\n",
-    "    #matrix_df_1 = pd.read_pickle(\"results/DistanceFlying_matrices_std1.pkl\")\n",
-    "    #matrix_df = pd.concat([matrix_df_0, matrix_df_1])\n",
+    "    matrix_df = pd.read_pickle(f\"results/demo_results_matrices_{estimator}.pkl\")\n",
     "except FileNotFoundError:\n",
     "    print(\"Run generate_flying_results.py to generate results.\")\n",
     "matrix_df"
@@ -948,8 +973,8 @@
     "fig, axs = plt.subplots(4, 1, sharex=True)\n",
     "fig.set_size_inches(20, 20)\n",
     "\n",
-    "plot_groundtruth(axs[0], color=\"white\")\n",
-    "plot_groundtruth(axs[1], color=\"black\")\n",
+    "plot_groundtruth_d(axs[0], color=\"white\")\n",
+    "plot_groundtruth_d(axs[1], color=\"black\")\n",
     "plot_tail(axs[3], matrix)\n",
     "\n",
     "# try different wall detection schemes\n",
@@ -989,7 +1014,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    scores = pd.read_pickle(\"results/demo_results_classifier.pkl\")\n",
+    "    scores = pd.read_pickle(f\"results/demo_results_classifier_{estimator}.pkl\")\n",
     "    scores.loc[~scores[\"mask bad\"].isin([\"adaptive\", \"fixed\"]), \"mask bad\"] = \"None\"\n",
     "except FileNotFoundError:\n",
     "    print(\"File not found. Generate it using generate_classifier_results.py\")"
@@ -1108,12 +1133,13 @@
     "from generate_classifier_results import get_groundtruth_distances, get_precision_recall, THRESHOLDS_DICT\n",
     "from utils.pandas_utils import filter_by_dict\n",
     "\n",
-    "n_windows = [1, 3, 5]\n",
+    "n_windows = matrix_df[\"n window\"].unique()\n",
+    "print(matrix_df)\n",
     "chosen_method = \"distance-mean\"\n",
     "chosen_dict = {\n",
     "    \"n window\": None, # is filled below\n",
     "    \"simplify angles\": False,\n",
-    "    \"relative std\": 0.0,\n",
+    "    \"relative std\": 1.0,\n",
     "    \"calibration name\": \"iir\",\n",
     "    \"calibration param\": 0.3,\n",
     "    \"mask bad\": \"fixed\"\n",
@@ -1125,6 +1151,7 @@
     "matrix_df[\"calibration param\"] = np.round(matrix_df[\"calibration param\"], 1)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(4, 4)\n",
     "delta = 0.05\n",
     "for i_window, n_window in enumerate(n_windows):\n",
     "    chosen_dict[\"n window\"] = n_window\n",
@@ -1134,10 +1161,11 @@
     "    matrix = rows.iloc[0][\"matrix distances\"][0]\n",
     "    precision, recall = get_precision_recall(matrix, distances_wall, method=chosen_method, verbose=False, sort=False) \n",
     "    ax.plot(precision, recall, marker='o', label=f\"n window: {n_window}\")\n",
+    "    \n",
     "    thresholds = THRESHOLDS_DICT[chosen_method]\n",
     "    for t, p, r in zip(thresholds, precision, recall):\n",
-    "        if r < 1: \n",
-    "            ax.annotate(t, (p + -delta*i_window, r+delta*i_window))\n",
+    "        if (n_window == max(n_windows)) and (r < 1):\n",
+    "            ax.annotate(t, (p + -delta, r+delta))\n",
     "            \n",
     "    #fig_mat, ax_mat = plt.subplots()\n",
     "    #ax_mat.pcolorfast(np.arange(matrix.shape[1]), DISTANCES_CM, np.log10(matrix))\n",
@@ -1148,7 +1176,7 @@
     "ax.set_ylim(-0.1, 1.1)\n",
     "ax.grid(True)\n",
     "plt.tight_layout()\n",
-    "ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])"
+    "ax.legend(loc='lower left') #bbox_to_anchor=[1.0, 1.0])"
    ]
   },
   {
