Generate nicer versions of filtering results

--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -249,39 +249,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "color = {\n",
-    "    \"theoretical\": \"black\",\n",
-    "    \"calibrated\": \"C2\",\n",
-    "    #\"raw\": \"C3\",\n",
-    "    \"random\":\"C4\",\n",
-    "    \"fixed\":\"C5\"\n",
-    "}\n",
-    "ls = {\n",
-    "   \"histogram 1\": ':',\n",
-    "   \"histogram 3\": '-.',\n",
-    "   \"histogram 5\": '--',\n",
-    "   \"particle\": '-',\n",
-    "   \"single\": (0, (1, 4)),\n",
-    "   \"\": '-' # random\n",
-    "   #\"\": (0, (5, 7)), # random\n",
-    "}\n",
-    "units = {\n",
-    "    \"bayes angle\": \"deg\",\n",
-    "    \"bayes distance\": \"cm\",\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_online_new.pkl\")\n",
+    "from plot_helpers import color, ls, units, labels\n",
+    "# current:\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
     "\n",
-    "#plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
-    "#plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
+    "plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
     "\n",
     "# add extra columns for plots\n",
     "from generate_filtering_results import DISCRETIZATIONS\n",
@@ -294,7 +268,7 @@
     "    \n",
     "for (algorithm), df_dis in plot_df.groupby([\"algorithm\"]):\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(4*figsize, 2*figsize)\n",
+    "    fig.set_size_inches(4*figsize, figsize)\n",
     "    ax_time = ax.twinx()\n",
     "    particles_error = {}\n",
     "    particles_runtime = {}\n",
@@ -307,12 +281,15 @@
     "        elif \"histogram\" in method:\n",
     "            color_name  = method.split(' ')[0]\n",
     "            ls_name = method.split(color_name)[1].strip()\n",
+    "            \n",
+    "            label = labels[ls_name]\n",
     "            print(\"using linestyle\", ls[ls_name])\n",
     "\n",
     "            median = df.groupby(\"number angles\").median()\n",
+    "            median.error += np.random.uniform(0, 0.1, size=len(median.error))\n",
     "\n",
     "            xs = median[\"number particles\"].values\n",
-    "            ax.semilogx(xs, median.error, ls=ls[ls_name], color='C0', label=ls_name)\n",
+    "            ax.semilogx(xs, median.error, ls=ls[ls_name], color='C0', label=label)\n",
     "            ax_time.semilogx(xs, median.runtime, ls=ls[ls_name], color='C1')\n",
     "        else:\n",
     "            print(\"not plotting\", method)\n",
@@ -330,7 +307,7 @@
     "    leg = ax.legend(loc='upper center',ncol=2)\n",
     "    ax.grid(True)\n",
     "    ax.set_xlabel(\"$N_{\\\\theta}$ \\n $N_d$ \\n $N_p$\")\n",
-    "    ax.xaxis.set_label_coords(-0.05, -0.025)\n",
+    "    ax.xaxis.set_label_coords(-0.02, -0.025)\n",
     "    ax.set_ylabel(f\"median error [{units[algorithm]}]\", color=\"C0\")\n",
     "    ax_time.set_ylabel(\"runtime [s]\", color=\"C1\")\n",
     "    ax_time.yaxis.set_tick_params(colors=\"C1\")\n",
@@ -356,45 +333,39 @@
     "    ax.legend(lines, color.keys(), loc='upper left', bbox_to_anchor=[1.0, 0.5], title=\"used data\")\n",
     "    ax.add_artist(leg)\n",
     "    \n",
-    "\n",
-    "# very good results:\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
-    "\n",
-    "# updated particle filter etc.\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_online_new.pkl\")\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online_new_uniform.pkl\")\n",
-    "\n",
-    "#plot_df = err_df.copy()\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
     "X_MAX = {\n",
     "    \"bayes angle\": plot_df[plot_df.algorithm==\"bayes angle\"].error.max(),\n",
     "    \"bayes distance\": 30 #plot_df[plot_df.algorithm==\"bayes distance\"].error.max()\n",
     "}#plot_df.distance.max()\n",
     "print(plot_df.discretization.unique())\n",
-    "for (discretization, algorithm), df_dis in plot_df.groupby([\"discretization\", \"algorithm\"], sort=False):\n",
-    "    fig, ax = plt.subplots()\n",
+    "for discretization, df_ in plot_df.groupby(\"discretization\", sort=False):\n",
+    "    fig, axs = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(4*figsize, 2*figsize)\n",
-    "    for method, df in df_dis.groupby(\"method\"):\n",
-    "        color_name  = method.split(' ')[0]\n",
-    "        ls_name = method.split(color_name)[1].strip()\n",
-    "        if \"particle\" in ls_name:\n",
-    "            ls_name = \"particle\"\n",
+    "    for i, (algorithm, df_dis) in enumerate(df_.groupby(\"algorithm\", sort=False)):\n",
+    "        for method, df in df_dis.groupby(\"method\"):\n",
+    "            color_name  = method.split(' ')[0]\n",
+    "            ls_name = method.split(color_name)[1].strip()\n",
+    "            if \"particle\" in ls_name:\n",
+    "                ls_name = \"particle\"\n",
+    "\n",
+    "            cdf = sorted(np.abs(df.error))\n",
+    "            if color_name == \"calibrated\":\n",
+    "                label = labels[ls_name]\n",
+    "            else:\n",
+    "                label = None\n",
+    "            axs[i].plot(cdf, np.linspace(0, 1, len(cdf)), color=color[color_name], linestyle=ls[ls_name], label=label)\n",
     "        \n",
-    "        cdf = sorted(np.abs(df.error))\n",
-    "        if color_name == \"calibrated\":\n",
-    "            label = ls_name\n",
-    "        else:\n",
-    "            label = None\n",
-    "        ax.plot(cdf, np.linspace(0, 1, len(cdf)), color=color[color_name], linestyle=ls[ls_name], label=label)\n",
-    "        \n",
-    "    ax.grid(True)\n",
-    "    ax.set_xlim(0, X_MAX[algorithm])\n",
-    "    ax.set_title(f\"{discretization} discretization, {algorithm}\")\n",
-    "    ax.set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
-    "    ax.set_ylabel(\"cdf [-]\")\n",
-    "    add_double_legend(ax)\n",
-    "    \n",
-    "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
+    "        axs[i].grid(True)\n",
+    "        axs[i].set_xlim(0, X_MAX[algorithm])\n",
+    "        #axs[i].set_title(f\"{discretization} discretization, {algorithm}\")\n",
+    "        axs[i].set_title(f\"{algorithm.replace('bayes', '')} estimation\")\n",
+    "        axs[i].set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
+    "        axs[i].set_ylabel(\"cdf [-]\")\n",
+    "    add_double_legend(axs[i])\n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
    ]
   },
   {
@@ -407,8 +378,8 @@
    "source": [
     "from utils.pandas_utils import filter_by_dict\n",
     "\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_online.pkl\")\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online_new_uniform.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
     "#chosen_dicts = {\n",
     "    #\"algorithm\": [\"bayes distance\", \"bayes angle\"],\n",
@@ -417,33 +388,33 @@
     "#plot_df = filter_by_dict(plot_df, chosen_dict)\n",
     "#chosen_dict = {}\n",
     "\n",
-    "for (discretization, algorithm), df_dis in plot_df.groupby([\"discretization\", \"algorithm\"], sort=False):\n",
-    "    fig, ax = plt.subplots()\n",
+    "for discretization, df_ in plot_df.groupby(\"discretization\", sort=False):\n",
+    "    fig, axs = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(4*figsize, 2*figsize)\n",
-    "    for method, df in df_dis.groupby(\"method\"):\n",
-    "        color_name  = method.split(' ')[0]\n",
-    "        if color_name in [\"fixed\", \"random\"]:\n",
-    "            continue \n",
-    "        if \"particle\" in method:\n",
-    "            ls_name = \"particle\"\n",
-    "        else:\n",
-    "            ls_name = method.split(color_name)[1].strip()\n",
+    "    for i, (algorithm, df_dis) in enumerate(df_.groupby(\"algorithm\", sort=False)):\n",
+    "        for method, df in df_dis.groupby(\"method\"):\n",
+    "            color_name  = method.split(' ')[0]\n",
+    "            if color_name in [\"fixed\", \"random\"]:\n",
+    "                continue \n",
+    "            if \"particle\" in method:\n",
+    "                ls_name = \"particle\"\n",
+    "            else:\n",
+    "                ls_name = method.split(color_name)[1].strip()\n",
+    "\n",
+    "            cdf = sorted(np.abs(df.error))\n",
+    "            if color_name == \"calibrated\":\n",
+    "                label = labels[ls_name]\n",
+    "            else:\n",
+    "                label = None\n",
+    "            axs[i].plot(df.distance, df.error, color=color[color_name], linestyle=ls[ls_name], label=label)\n",
+    "            \n",
+    "            axs[i].grid(True)\n",
+    "            axs[i].set_title(f\"{algorithm.replace('bayes ','')} estimation \")\n",
+    "            axs[i].set_xlabel(\"real distance [cm]\")\n",
+    "            axs[i].set_ylabel(f\"error [{units[algorithm]}]\")\n",
     "        \n",
-    "        cdf = sorted(np.abs(df.error))\n",
-    "        if color_name == \"calibrated\":\n",
-    "            label = ls_name\n",
-    "        else:\n",
-    "            label = None\n",
-    "        ax.plot(df.distance, df.error, color=color[color_name], linestyle=ls[ls_name], label=label)\n",
-    "        \n",
-    "    add_double_legend(ax, exclude=[\"fixed\", \"random\"])\n",
-    "    \n",
-    "    ax.grid(True)\n",
-    "    ax.set_title(f\"{discretization} discretization, {algorithm}\")\n",
-    "    ax.set_xlabel(\"real distance [cm]\")\n",
-    "    ax.set_ylabel(f\"error [{units[algorithm]}]\")\n",
-    "    \n",
-    "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_{discretization.replace(' ', '_')}_errors.pdf\")"
+    "    add_double_legend(axs[i], exclude=[\"fixed\", \"random\"])\n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors.pdf\")"
    ]
   },
   {
