--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -460,18 +460,21 @@
     "    \n",
     "    try:\n",
     "        raise\n",
+    "        print(WIDEBAND_FILE)\n",
     "        signal = np.load(WIDEBAND_FILE)\n",
+    "        \n",
     "    except:\n",
     "        print(\"creating wideband signal...\")\n",
     "        signal = create_wideband_signal(freq)\n",
     "        np.save(WIDEBAND_FILE, signal)\n",
     "        print(f\"saved as {WIDEBAND_FILE}\")\n",
     "\n",
-    "    with progressbar.ProgressBar(max_value=len(dist) - 1) as bar:\n",
-    "        for j, distance_cm in enumerate(dist):\n",
-    "            slice_mics = get_freq_slice_pyroom(freq, distance_cm, signal)\n",
-    "            df_matrix[:, j] = slice_mics[mic_idx]\n",
-    "            bar.update(j)\n",
+    "    bar = progressbar.ProgressBar(maxval=len(dist) - 1)\n",
+    "    bar.start()\n",
+    "    for j, distance_cm in enumerate(dist):\n",
+    "        slice_mics = get_freq_slice_pyroom(freq, distance_cm, signal)\n",
+    "        df_matrix[:, j] = slice_mics[mic_idx]\n",
+    "        bar.update(j)\n",
     "    series = pd.Series(\n",
     "        {\"df_matrix\": df_matrix, \"distances\": dist, \"frequencies\": freq}\n",
     "    )\n",
@@ -490,7 +493,7 @@
     "ax.pcolorfast(dist, freq, df_matrix)\n",
     "plt.xlabel(\"distance [cm]\")\n",
     "plt.ylabel(\"frequency [Hz]\")\n",
-    "matrix_slices(df_matrix, freq, dist)"
+    "#matrix_slices(df_matrix, freq, dist)"
    ]
   },
   {
@@ -1648,7 +1651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1662,7 +1665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
