Greatly improve plots

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -616,18 +616,37 @@
    },
    "outputs": [],
    "source": [
+    "from plot_helpers import ls, labels, add_double_legend\n",
+    "from generate_filtering_results import angle_error\n",
+    "\n",
+    "print(ls)\n",
     "chosen_calibration_param = 0.3\n",
     "simplify_angles = False\n",
     "fig_size_cdf = (10, 4)\n",
     "\n",
     "fig_cdf, axs_cdf = plt.subplots(1, 2)\n",
     "fig_cdf.set_size_inches(*fig_size_cdf)\n",
-    "fig_cdf.suptitle(f\"angles simplified {simplify_angles}\")\n",
+    "#fig_cdf.suptitle(f\"angles simplified {simplify_angles}\")\n",
     "\n",
+    "discretization = \"fine\"\n",
+    "\n",
+    "#appendices = [\"_new3\", \"_new6\"] + [f\"_{i}\" for i in range(1, 3)] \n",
+    "appendices = [\"_new3\", \"_new6\"] + [f\"_{i}\" for i in range(1, 7)] \n",
+    "#appendices = [f\"_{i}\" for i in range(1, 7)] \n",
+    "color = {f\"exp{a}\": \"C0\" if \"new\" in a else \"C1\" for i, a in enumerate(appendices) }\n",
+    "color[\"random\"] = \"k\"\n",
+    "color[\"fixed\"] = \"k\"\n",
     "\n",
     "for estimator in [\"particle\", \"moving\"]:\n",
-    "    for appendix in [f\"_{i}\" for i in range(1, 7)] + [\"_new3\", \"_new6\"]:\n",
-    "        gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, flying=True, angles=True)\n",
+    "    for i_app, appendix in enumerate(appendices):\n",
+    "        \n",
+    "        # flow deck was drifting a lot for experiments downstairs (carpet)\n",
+    "        # so we use the wall as a reference for ground truth distance (the drone always hit the wall)\n",
+    "        if not \"_new\" in appendix:\n",
+    "            correct = True\n",
+    "        else:\n",
+    "            correct = False\n",
+    "        gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, flying=True, angles=True, correct=True)\n",
     "        df_mat = pd.read_pickle(f\"results/flying_results_matrices_{estimator}{appendix}.pkl\") \n",
     "        if estimator == \"particle\":\n",
     "            relative_std = 0.0\n",
@@ -640,12 +659,16 @@
     "            (df_mat[\"relative std\"]==relative_std)\n",
     "        ]\n",
     "        for i, row in df_here.iterrows():\n",
-    "            print(i)\n",
-    "\n",
     "            if estimator == \"particle\":\n",
-    "                label = \"particle filter\"\n",
+    "                method = \"particle\"\n",
     "            else:\n",
-    "                label = f\"histogram $N_w={row['n window']}$\"\n",
+    "                method = f\"histogram {row['n window']}\"\n",
+    "                \n",
+    "            if appendix == appendices[0]:\n",
+    "                label = labels[method]\n",
+    "            else:\n",
+    "                label = None\n",
+    "                \n",
     "            n_calib_here = int(np.floor(row[\"calibration param\"]))\n",
     "            d_here = row[\"distances_cm\"]\n",
     "            a_here = row[\"angles_deg\"]\n",
@@ -656,40 +679,76 @@
     "\n",
     "            cdf_distances = np.sort(np.abs(d_estimates[n_calib:] - gt_distances[n_calib:]))\n",
     "            y = np.linspace(0, 1, len(cdf_distances))\n",
-    "            axs_cdf[0].plot(cdf_distances, y, label=label+appendix)\n",
+    "            axs_cdf[0].plot(cdf_distances, y, ls=ls[method], label=label, color=color[f\"exp{appendix}\"])\n",
     "\n",
     "            if not row[\"simplify angles\"]:\n",
     "                a_estimates = get_estimates_here(matrix_angles, a_here)\n",
-    "                cdf_angles = np.sort(np.abs(a_estimates - gt_angles))\n",
+    "                \n",
+    "                error = angle_error(a_estimates, gt_angles)\n",
+    "                cdf_angles = np.sort(np.abs(error))\n",
     "                y = np.linspace(0, 1, len(cdf_angles))\n",
-    "                axs_cdf[1].plot(cdf_angles, y, label=label+appendix)\n",
+    "                axs_cdf[1].plot(cdf_angles, y, label=label, ls=ls[method], color=color[f\"exp{appendix}\"])\n",
+    "                \n",
     "            fig, ax = plot_matrix(d_here, matrix_distances, #xvalues=times, \n",
     "                                  gt_values=gt_distances,\n",
     "                                  no_deco=no_deco, n_calib=n_calib_here)\n",
-    "            ax.set_title(label + appendix)\n",
+    "            ax.set_title(f\" exp{appendix}\")\n",
     "            fig.set_size_inches(*fig_size)\n",
-    "            save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_{estimator}_distance_{i}_{simplify_angles}.pdf\")\n",
+    "            #save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_{estimator}_distance_{i}_{simplify_angles}.pdf\")\n",
     "\n",
     "            if (estimator == \"moving\") and row[\"simplify angles\"]:\n",
     "                continue\n",
+    "            \n",
+    "            continue\n",
     "            fig, ax = plot_matrix(a_here, matrix_angles, #xvalues=times, \n",
     "                                  gt_values = gt_angles,\n",
     "                                  no_deco=no_deco, n_calib=n_calib_here)\n",
-    "            ax.set_title(label + appendix)\n",
+    "            ax.set_title(f\" exp{appendix}\")\n",
     "            #ax.set_title(label)\n",
     "            fig.set_size_inches(*fig_size)\n",
     "            save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_{estimator}_angle_{i}_{simplify_angles}.pdf\")\n",
     "            \n",
-    "axs[0].grid(True)\n",
-    "axs[1].grid(True)\n",
-    "axs[0].set_xlabel(\"absolute error distance [cm]\")\n",
-    "axs[1].set_xlabel(\"absolute error angle [deg]\")\n",
-    "axs[0].set_ylabel(\"cdf [-]\")\n",
-    "axs[1].set_ylabel(\"cdf [-]\")\n",
-    "axs[0].set_xlim(0, 80)\n",
-    "axs[1].set_xlim(0, 180)\n",
-    "axs[0].legend(loc=\"lower right\")\n",
-    "save_fig(fig_cdf, f\"plots/experiments/{exp_name}{appendix}_cdfs_{simplify_angles}.pdf\")"
+    "figsize = 2\n",
+    "leg = axs_cdf[1].legend(title=\"filter\", loc=\"lower left\", bbox_to_anchor=[1.0, 0.5])\n",
+    "\n",
+    "print(d_here)\n",
+    "d_random = np.random.choice(range(7, 81), size=len(gt_distances))\n",
+    "a_random = np.random.choice(range(360), size=len(gt_angles))\n",
+    "\n",
+    "lines = []; labels = []\n",
+    "\n",
+    "axs_cdf[0].plot(sorted(np.abs(d_random-gt_distances)), np.linspace(0, 1, len(gt_distances)), color=color[\"random\"])\n",
+    "line, = axs_cdf[1].plot(sorted(np.abs(angle_error(a_random, gt_angles))), np.linspace(0, 1, len(gt_angles)), color=color[\"random\"])\n",
+    "lines.append(line); labels.append(\"random\")\n",
+    "\n",
+    "d_fixed = (80 - 7) / 2\n",
+    "a_fixed = 90 + 180\n",
+    "a_random = np.random.choice(range(360), size=len(gt_angles))\n",
+    "line, = axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances)), np.linspace(0, 1, len(gt_distances)), ls=\":\", color=color[\"fixed\"])\n",
+    "lines.append(line); labels.append(\"fixed\")\n",
+    "\n",
+    "axs_cdf[1].plot(sorted(np.abs(angle_error(a_fixed, gt_angles))), np.linspace(0, 1, len(gt_angles)), ls=\":\", color=color[\"fixed\"])\n",
+    "line, = axs_cdf[1].plot([], [], color=\"C0\")\n",
+    "lines.append(line); labels.append(\"dataset glass wall\")\n",
+    "line, = axs_cdf[1].plot([], [], color=\"C1\")\n",
+    "lines.append(line); labels.append(\"dataset whiteboard\")\n",
+    "axs_cdf[1].legend(lines, labels, title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.5])\n",
+    "axs_cdf[1].add_artist(leg)\n",
+    "\n",
+    "#add_double_legend(axs_cdf[1], color=color)\n",
+    "axs_cdf[0].grid(True)\n",
+    "axs_cdf[1].grid(True)\n",
+    "axs_cdf[0].set_xlabel(\"absolute error [cm]\")\n",
+    "axs_cdf[1].set_xlabel(\"absolute error [deg]\")\n",
+    "axs_cdf[0].set_title(\"distance estimation\")\n",
+    "axs_cdf[1].set_title(\"angle estimation\")\n",
+    "axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
+    "axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
+    "axs_cdf[0].set_xlim(0, 30)\n",
+    "axs_cdf[1].set_xlim(0, 200)\n",
+    "fig_cdf.set_size_inches(8, 4)\n",
+    "fig_cdf.subplots_adjust(wspace=0.3)\n",
+    "save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_cdfs.pdf\")"
    ]
   },
   {
