--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -266,6 +266,11 @@
     "    n_particles = len(distances_cm) * len(angles_deg) // 2\n",
     "    plot_df.loc[plot_df.discretization == discretization, [\"number angles\", \"number distances\", \"number particles\"]] = (len(angles_deg), len(distances_cm), n_particles)\n",
     "    \n",
+    "shifts = {\n",
+    "    \"histogram 1\": 0.05,\n",
+    "    \"histogram 3\": 0.1,\n",
+    "    \"histogram 5\": 0.15,\n",
+    "}\n",
     "for (algorithm), df_dis in plot_df.groupby([\"algorithm\"]):\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(4*figsize, figsize)\n",
@@ -286,7 +291,7 @@
     "            print(\"using linestyle\", ls[ls_name])\n",
     "\n",
     "            median = df.groupby(\"number angles\").median()\n",
-    "            median.error += np.random.uniform(0, 0.1, size=len(median.error))\n",
+    "            median.error += shifts[ls_name]\n",
     "\n",
     "            xs = median[\"number particles\"].values\n",
     "            ax.semilogx(xs, median.error, ls=ls[ls_name], color='C0', label=label)\n",
@@ -321,21 +326,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def add_double_legend(ax, exclude=[]):\n",
-    "    leg = ax.legend(loc='lower left', bbox_to_anchor=[1.0, 0.5], title=\"discretization method\")\n",
-    "    lines = []\n",
-    "    for name, c in color.items():\n",
-    "        if name in exclude:\n",
-    "            continue\n",
-    "        name = \"measured\" if name == \"calibrated\" else name\n",
-    "        lines.append(ax.plot([], [], color=c)[0])\n",
-    "    ax.legend(lines, color.keys(), loc='upper left', bbox_to_anchor=[1.0, 0.5], title=\"used data\")\n",
-    "    ax.add_artist(leg)\n",
-    "    \n",
+    "from plot_helpers import add_double_legend\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
     "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
+    "print(\"figsize\", figsize)\n",
     "X_MAX = {\n",
     "    \"bayes angle\": plot_df[plot_df.algorithm==\"bayes angle\"].error.max(),\n",
     "    \"bayes distance\": 30 #plot_df[plot_df.algorithm==\"bayes distance\"].error.max()\n",
@@ -364,7 +367,9 @@
     "        axs[i].set_title(f\"{algorithm.replace('bayes', '')} estimation\")\n",
     "        axs[i].set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
     "        axs[i].set_ylabel(\"cdf [-]\")\n",
+    "        axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
     "    add_double_legend(axs[i])\n",
+    "    fig.subplots_adjust(wspace=0.3)\n",
     "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
    ]
   },
@@ -411,9 +416,11 @@
     "            axs[i].grid(True)\n",
     "            axs[i].set_title(f\"{algorithm.replace('bayes ','')} estimation \")\n",
     "            axs[i].set_xlabel(\"real distance [cm]\")\n",
-    "            axs[i].set_ylabel(f\"error [{units[algorithm]}]\")\n",
+    "            axs[i].set_ylabel(f\"error [{units[algorithm]}]\", y=0.5, x=0.01)\n",
+    "            axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
     "        \n",
     "    add_double_legend(axs[i], exclude=[\"fixed\", \"random\"])\n",
+    "    fig.subplots_adjust(wspace=0.3)\n",
     "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors.pdf\")"
    ]
   },
